--- a/fuse_models/CMakeLists.txt
+++ b/fuse_models/CMakeLists.txt
@@ -88,12 +88,16 @@ add_library(${PROJECT_NAME}
   src/imu_2d.cpp
   src/odometry_2d.cpp
   src/odometry_2d_publisher.cpp
+  src/odometry_3d_publisher.cpp
   src/pose_2d.cpp
   src/transaction.cpp
   src/twist_2d.cpp
   src/unicycle_2d.cpp
   src/unicycle_2d_ignition.cpp
   src/unicycle_2d_state_kinematic_constraint.cpp
+  src/unicycle_3d.cpp
+  src/unicycle_3d_ignition.cpp
+  src/unicycle_3d_state_kinematic_constraint.cpp
 )
 add_dependencies(${PROJECT_NAME}
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
@@ -169,6 +173,21 @@ if(CATKIN_ENABLE_TESTING)
       CXX_STANDARD_REQUIRED YES
   )
 
+  add_rostest_gtest(
+    test_unicycle_3d
+    test/unicycle_3d.test
+    test/test_unicycle_3d.cpp
+  )
+  target_link_libraries(test_unicycle_3d
+    ${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+  )
+  set_target_properties(test_unicycle_3d
+    PROPERTIES
+      CXX_STANDARD 17
+      CXX_STANDARD_REQUIRED YES
+  )
+
   # Prediction tests
   catkin_add_gtest(
     test_unicycle_2d_predict
@@ -180,6 +199,21 @@ if(CATKIN_ENABLE_TESTING)
     ${CERES_LIBRARIES}
   )
   set_target_properties(test_unicycle_2d_predict
+    PROPERTIES
+      CXX_STANDARD 17
+      CXX_STANDARD_REQUIRED YES
+  )
+
+  catkin_add_gtest(
+    test_unicycle_3d_predict
+    test/test_unicycle_3d_predict.cpp
+  )
+  target_link_libraries(test_unicycle_3d_predict
+    ${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+    ${CERES_LIBRARIES}
+  )
+  set_target_properties(test_unicycle_3d_predict
     PROPERTIES
       CXX_STANDARD 17
       CXX_STANDARD_REQUIRED YES
@@ -197,6 +231,22 @@ if(CATKIN_ENABLE_TESTING)
     ${CERES_LIBRARIES}
   )
   set_target_properties(test_unicycle_2d_state_cost_function
+    PROPERTIES
+      CXX_STANDARD 17
+      CXX_STANDARD_REQUIRED YES
+  )
+
+  catkin_add_gtest(
+    test_unicycle_3d_state_cost_function
+    test/test_unicycle_3d_state_cost_function.cpp
+  )
+  target_link_libraries(
+    test_unicycle_3d_state_cost_function
+    ${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+    ${CERES_LIBRARIES}
+  )
+  set_target_properties(test_unicycle_3d_state_cost_function
     PROPERTIES
       CXX_STANDARD 17
       CXX_STANDARD_REQUIRED YES
